RESOLVED FIXED70362
Certain column-rule styles render incorrectly in vertical writing modes
https://bugs.webkit.org/show_bug.cgi?id=70362
Summary Certain column-rule styles render incorrectly in vertical writing modes
mitz
Reported 2011-10-18 14:19:45 PDT
Certain column-rule styles render incorrectly in vertical writing modes
Attachments
Use the correct border box sides for rules in vertical writing modes (21.98 KB, patch)
2011-10-18 14:21 PDT, mitz
darin: review+
mitz
Comment 1 2011-10-18 14:21:37 PDT
Created attachment 111498 [details] Use the correct border box sides for rules in vertical writing modes
mitz
Comment 2 2011-10-18 15:13:36 PDT
Note You need to log in before you can comment on or make changes to this bug.