Certain column-rule styles render incorrectly in vertical writing modes https://bugs.webkit.org/show_bug.cgi?id=70362

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/multicol/vertical-rl/rule-style.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintColumnRules): Use the correct border sides for vertical writing modes.

LayoutTests:

* fast/multicol/vertical-rl/rule-style-expected.png: Added.
* fast/multicol/vertical-rl/rule-style-expected.txt: Added.
* fast/multicol/vertical-rl/rule-style.html: Added.



Canonical link: https://commits.webkit.org/86511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97794 268f45cc-cd09-0410-ab3c-d52691b4dbfc